mnt-homeworks/12-05-kuber-network02/src/service_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: multitool
      port: 80
      protocol: TCP
  selector:
    app: backend
