mnt-homeworks/12-05-kuber-network02/src/service_frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
  selector:
    app: frontend
